protobuf
syntax = "proto3";

option java_package = "com.mikewarren.speakify.data";
option java_multiple_files = true;

message AppSettings {
  string app_name = 1;
  string announcer_voice = 2;
  repeated string notification_sources = 3;
}

message UserSettings {
  bool use_dark_theme = 4;
  string selected_tts_voice = 5;
  map<string, AppSettings> app_settings = 6;
}